# prolog-landesabgabe

./: .clang-format  .dockerignore  .env  .env.debug-local  .env.debug-local-server-keycloak  .env.development  .env.production-server  .gitignore  .gitmodules  .prettierrc  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  LICENCE.md  Makefile  Package.resolved  Package.swift  README.md  bridging-header.h  build.rs  deploy.sh  eslint.config.mjs  flake.nix  gebietskörperschaften.pl  landesabgabe_oö_obertätige_gewinnen_von_mineralische_rohstoffe.pl  package-lock.json  package.json  sachverthalt2.pl  sources.list  vcpkg.json  vite.config.mjs  wrangler.jsonc
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/backend/: .env  devcontainer.json  docker-compose.yml
.devcontainer/backend-debian/: .env  devcontainer.json
.devcontainer/backend-fedora/: devcontainer.json
.devcontainer/backend-rhel/: devcontainer.json
.devcontainer/backend-ubuntu/: devcontainer.json
.devcontainer/frontend/: .env  devcontainer.json  docker-compose.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build_frontend.yml  build_worker.yml  dev-pull-request.yml  docker-image-🐋.yml  docker-image.yml  frontend-image.yml  nix-flake-❄️.yml
Containers/: Backend.dockerfile  docker-compose.yml
Dependencies/: Dependencies.cmake  incbin.cmake  swift510.nix
Docs/: Design.tex
Infrastructure/: Frontend.dockerfile  WebFrontend.dockerfile  Worker.dockerfile  docker-compose.dev.yml
Infrastructure/Docker/: .env  docker-compose.yml
Playground/: main.swift
Scripts/: generate-env-keys.sh  init-git-submodules.sh  launch-dev-frontend.sh  open-shell.sh  update-nginx-release.sh
Sources/: labbg.pl  landschaftsabgabegesetz.pl  main.swift  rust-bridging-header.h
Sources/ActBuilder/: ActBuilder.dockerfile
Sources/ActKit/: CMakeLists.txt  Code.swift  LegalElement.swift  LegalElements.swift  LegalElementsBuilders.swift
Sources/Assets/: CMakeLists.txt  Cargo.toml  assets.c  assets.c++  build.rs
Sources/Assets/Include/: assets.h
Sources/Assets/Testing/: test_get_from_assets.c++
Sources/Assets/include/: assets.h  module.modulemap  rust-bridging-header.h
Sources/Assets/src/: lib.rs  main.rs
Sources/Backend/: Cargo.toml  README.md
Sources/Backend/src/: app_config.rs  app_state.rs  bin.rs  build_information.rs  frontend_routes.rs  keycloak_config.rs  lib.rs  main.rs  prolog_vm.rs
Sources/Backend/src/prolog_vm/: assets.rs  mod.rs  prolog_vm.rs
Sources/Backend/src/prolog_wrapper/: mod.rs  prolog_file.rs  scryer.rs
Sources/Backend/src/routes/: app_config.rs  app_state.rs  corpus.rs  keycloak_config.rs  mod.rs  prolog_vm.rs  util_services.rs
Sources/Backend/src/testing/: logger.rs
Sources/BackendInterfaces/: Cargo.toml
Sources/BuildInformation/: Cargo.toml  build.rs
Sources/BuildInformation/src/: lib.rs
Sources/Corpus/: --transform  CMakeLists.txt  Cargo.toml  LabggDefinitions.ts  LabggDefinitions.tsx  Landesabgabe.lt  build.rs  humusabgabe.pl  hundehalterabgabe.pl  krog.pl  labgg.pl  lib.rs  main.rs
Sources/Docker/: .env  Backend-Debian.dockerfile  Backend-Fedora.dockerfile  Backend-RHEL.dockerfile  Backend-Ubuntu.dockerfile  Backend.dockerfile  Dockerfile  WIP-Backend-Alpine.dockerfile  WIP-Backend-Windows.dockerfile  debian.sources  docker-compose.yml
Sources/Infrastructure/: docker-compose.yml
Sources/LX/: AppConfig.swift  CMakeLists.txt  Cargo.toml  EnvironmentConfig.swift  ModelProvider.swift  RabbitMQListener.c++  Routes.swift  Utility.swift  appConfig.swift  auth.swift  configure.swift  environmentConfig.swift  fetchLaw.swift  main.swift  package-lock.json  routes.swift  util.swift
Sources/LX/IncludeProjectPrivate/: module.modulemap
Sources/LX/src/: app_config.rs  corpus.rs  frontend_routes.rs  keycloak_config.rs  main.rs  prolog_vm.rs  util_services.rs
Sources/LogicKit/: CMakeLists.txt  Cargo.toml  LegalStatement.swift  LogicKit.c++  LogicKit.swift  Norm.swift  PrologVM.c++  SWIPrologHome.c  StdStatements.swift  TemplateEngine.swift  package.json  prolog_vm.c++  tsconfig.json  vite.config.js
Sources/LogicKit/Testing/: Testing.c++  main.swift
Sources/LogicKit/Testing/include/: Testing.h++  module.modulemap
Sources/LogicKit/include/: LogicKit.h++  PrologVM.h++  SWIPrologHome.h  module.modulemap  prolog_vm.h++
Sources/LogicKit/include-project/: SWIPrologHome.h
Sources/LogicKit/src/: assets.rs  index.ts  lib.rs  package-lock.json  prolog_vm.rs  runtime.ts
Sources/LogicKit/src/PrologVM/: PrologFileSystem.ts  PrologTemplates.ts  PrologVM.ts
Sources/LogicKit/src/prolog/: PrologTemplates.ts
Sources/MacUI/: CMakeLists.txt  CMakePresets.json  test.c  test.c++  test.h  test.m  test.mm
Sources/PrologVM/: Cargo.toml  build.rs
Sources/PrologVM/src/: assets.rs  lib.rs  prolog_file.rs  prolog_vm.rs
Sources/StdLib/: gebietskoerperschaften.pl  mineralrohstoffgesetz.pl
Sources/TemplateKit/: CMakeLists.txt  LabggTemplates.swift  TemplateKit.swift
Sources/WebServer/: Dockerfile  README.md  pom.xml  settings.xml
Sources/WebUI/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
Sources/lxui/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
Sources/stdlib/: abgb.pl  bergbau.pl  stdlib.pl
Testing/: ActKitTests.swift  LogicKitTests.swift  Testing.c++  main.swift  sachverhalt1.pl
Testing/Resources/: labgg-sachverhalt.pl  labgg-sachverhalt2.pl
Testing/include/: Testing.h++
Tests/ActKitTests/: Tests.swift
Tests/Corpus/: labgg-output1.pl  labgg-output2.pl  labgg-output3.pl  labgg-sachverhalt1.pl  labgg-sachverhalt2.pl  labgg-sachverhalt3.pl
Tests/LXTests/: ModelProviderTest.swift
Tests/LogicKit/: CMakeLists.txt  test_prolog_vm.c++  tets_prolog_vm.c++
Tests/workspaceTests/: workspaceTests.swift
corpus/: LabggDefinitions.tsx  krog.pl  labgg.pl
corpus/stdlib/: gebietskoerperschaften.pl  mineralrohstoffgesetz.pl
docs/: AMENDMENTS.md
src/: App.tsx  Router.tsx  style.css
src/corpus/: index.ts
(+131 files in other folders)
