[package]
name = "assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = { version = "8", features = ["include-exclude", "debug-embed", "compression"] }
swift-bridge = "0.1.57"

[build-dependencies]
swift-bridge-build = "0.1.57"

[lib]
crate-type = ["staticlib", "lib"]
