[package]
name = "assets"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = { version = "8.7.0", features = ["debug-embed"]}
swift-bridge = { version = "0.1.57", features = ["async"] }

[build-dependencies]
swift-bridge-build = { version = "0.1" }

[lib]
crate-type = ["staticlib", "rlib"]
