[package]
name = "build-information"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
wasm-bindgen = "0.2.100"
swift-bridge = { version = "0.1.57", features = ["async"] }

[build-dependencies]
swift-bridge-build = { version = "0.1" }

[lib]
crate-type = ["staticlib", "rlib"]
