[package]
name = "logic-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
deno_core = { version = "0.343.0", optional = true }
futures = "0.3.31"
rust-embed = "8.7.0"
swift-bridge = { version = "0.1.57", features = ["async"], optional = true }
tokio = "1.44.2"
wasm-bindgen = { version = "0.2.100", wasm-opt = true }

[build-dependencies]
swift-bridge-build = { version = "0.1", optional = true }

[features]
default = ["swift-bridge", "swift-bridge-build", "deno_core"]
wasm_runtime = []

[lib]
crate-type = ["staticlib", "rlib"]
